--- a/TileGame/TileGame/Base.lproj/Main.storyboard
+++ b/TileGame/TileGame/Base.lproj/Main.storyboard
@@ -17,14 +17,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8Fb-MQ-XGx">
-                                <rect key="frame" x="200" y="200" width="200" height="200"/>
+                                <rect key="frame" x="175" y="175" width="250" height="250"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="200" id="HW9-5F-kDJ"/>
-                                    <constraint firstAttribute="height" constant="200" id="moQ-Ue-laQ"/>
+                                    <constraint firstAttribute="width" constant="250" id="HW9-5F-kDJ"/>
+                                    <constraint firstAttribute="height" constant="250" id="moQ-Ue-laQ"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i6b-8I-ASw">
-                                <rect key="frame" x="200" y="420" width="40" height="40"/>
+                                <rect key="frame" x="175" y="445" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="d61-Xx-AKy"/>
                                     <constraint firstAttribute="width" constant="40" id="qvN-x5-B74"/>
@@ -38,7 +38,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="USl-h6-qgB">
-                                <rect key="frame" x="360" y="420" width="40" height="40"/>
+                                <rect key="frame" x="385" y="445" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="40" id="TYL-ZK-4DU"/>
                                     <constraint firstAttribute="height" constant="40" id="cAb-Io-SDS"/>
@@ -52,7 +52,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose image" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mj5-oM-ytJ">
-                                <rect key="frame" x="243" y="420" width="115" height="40"/>
+                                <rect key="frame" x="243" y="445" width="115" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="6BT-Fr-FRV"/>
                                     <constraint firstAttribute="width" constant="115" id="mEA-Dh-8gB"/>
@@ -62,7 +62,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7cw-uc-rQN">
-                                <rect key="frame" x="175" y="500" width="250" height="50"/>
+                                <rect key="frame" x="175" y="515" width="250" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="250" id="a9J-o5-fR1"/>
                                     <constraint firstAttribute="height" constant="50" id="p7H-FL-fvj"/>
@@ -76,9 +76,9 @@
                                     <segue destination="EGT-XM-OAO" kind="show" identifier="playGame" id="b9m-fU-xoq"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Shifting Tiles" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6p4-o8-wZC">
-                                <rect key="frame" x="145" y="86" width="312" height="64"/>
-                                <fontDescription key="fontDescription" name="Didot-Bold" family="Didot" pointSize="50"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shifting Tiles" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6p4-o8-wZC">
+                                <rect key="frame" x="154" y="75" width="293" height="60"/>
+                                <fontDescription key="fontDescription" name="Didot-Bold" family="Didot" pointSize="47"/>
                                 <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -92,12 +92,12 @@
                             <constraint firstAttribute="centerX" secondItem="8Fb-MQ-XGx" secondAttribute="centerX" id="Ldc-ae-IXZ"/>
                             <constraint firstItem="USl-h6-qgB" firstAttribute="trailing" secondItem="8Fb-MQ-XGx" secondAttribute="trailing" id="Llx-Iv-6l0"/>
                             <constraint firstAttribute="centerX" secondItem="Mj5-oM-ytJ" secondAttribute="centerX" id="NXS-a5-Fg2"/>
-                            <constraint firstItem="8Fb-MQ-XGx" firstAttribute="top" secondItem="6p4-o8-wZC" secondAttribute="bottom" constant="50" id="Naw-iu-mJr"/>
+                            <constraint firstItem="8Fb-MQ-XGx" firstAttribute="top" secondItem="6p4-o8-wZC" secondAttribute="bottom" constant="40" id="Naw-iu-mJr"/>
                             <constraint firstItem="Mj5-oM-ytJ" firstAttribute="centerX" secondItem="wfy-db-euE" secondAttribute="centerX" id="ba3-gU-oIn"/>
                             <constraint firstItem="Mj5-oM-ytJ" firstAttribute="baseline" secondItem="USl-h6-qgB" secondAttribute="baseline" id="gfP-Nl-oad"/>
                             <constraint firstAttribute="centerY" secondItem="8Fb-MQ-XGx" secondAttribute="centerY" id="ieR-Y5-Nfo"/>
                             <constraint firstItem="Mj5-oM-ytJ" firstAttribute="top" secondItem="USl-h6-qgB" secondAttribute="top" id="oaV-27-NJ9"/>
-                            <constraint firstItem="7cw-uc-rQN" firstAttribute="top" secondItem="Mj5-oM-ytJ" secondAttribute="bottom" constant="40" id="sCe-Uo-B6a"/>
+                            <constraint firstItem="7cw-uc-rQN" firstAttribute="top" secondItem="Mj5-oM-ytJ" secondAttribute="bottom" constant="30" id="sCe-Uo-B6a"/>
                             <constraint firstItem="i6b-8I-ASw" firstAttribute="baseline" secondItem="USl-h6-qgB" secondAttribute="baseline" id="t8B-X0-lPq"/>
                         </constraints>
                         <variation key="default">
@@ -126,12 +126,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap two tiles to swap their positions" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tGI-jj-7tq">
-                                <rect key="frame" x="163" y="49" width="275" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kU2-7Y-EGn">
                                 <rect key="frame" x="145" y="250" width="100" height="100"/>
                                 <gestureRecognizers/>
@@ -242,46 +236,56 @@
                                     <segue destination="BYZ-38-t0r" kind="show" identifier="backToMainScreen" id="KAn-53-Her"/>
                                 </connections>
                             </button>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Try to complete the picture by putting the tiles in the correct order. Tap two tiles to swap their positions. " translatesAutoresizingMaskIntoConstraints="NO" id="C42-AY-08P">
+                                <rect key="frame" x="145" y="28" width="310" height="85"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="310" id="gHV-jR-o5E"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BUW-hI-3S5">
+                                <rect key="frame" x="200" y="485" width="200" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="05X-KY-avX"/>
+                                    <constraint firstAttribute="width" constant="200" id="5so-J8-iVa"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="auM-7W-3nF" firstAttribute="top" secondItem="9Mc-zk-aL0" secondAttribute="top" id="49V-Vq-cnt"/>
                             <constraint firstItem="0uP-wt-8bb" firstAttribute="leading" secondItem="kU2-7Y-EGn" secondAttribute="leading" id="700-ip-Iaj"/>
                             <constraint firstItem="9xI-94-6Vx" firstAttribute="top" secondItem="5V8-fx-ZxH" secondAttribute="bottom" constant="5" id="Bgt-Wd-V0X"/>
-                            <constraint firstItem="tGI-jj-7tq" firstAttribute="top" secondItem="Qhz-G0-bft" secondAttribute="bottom" constant="29" id="CBW-rC-4lX"/>
+                            <constraint firstItem="BUW-hI-3S5" firstAttribute="top" secondItem="9xI-94-6Vx" secondAttribute="bottom" constant="30" id="DCQ-Zw-hG6"/>
                             <constraint firstItem="fKk-Ft-N1u" firstAttribute="top" secondItem="vI2-cd-d5v" secondAttribute="bottom" constant="20" id="GCS-qs-z38"/>
+                            <constraint firstAttribute="centerX" secondItem="C42-AY-08P" secondAttribute="centerX" id="JwL-29-Zp3"/>
                             <constraint firstItem="vI2-cd-d5v" firstAttribute="leading" secondItem="a6F-6c-ZDX" secondAttribute="leading" constant="20" id="KF9-cT-aTf"/>
+                            <constraint firstAttribute="centerX" secondItem="BUW-hI-3S5" secondAttribute="centerX" id="KY3-gm-i9K"/>
                             <constraint firstItem="Kog-KD-Q1b" firstAttribute="leading" secondItem="9xI-94-6Vx" secondAttribute="trailing" constant="5" id="QFc-AB-Dq1"/>
                             <constraint firstItem="5V8-fx-ZxH" firstAttribute="top" secondItem="auM-7W-3nF" secondAttribute="bottom" constant="5" id="SdT-BO-8di"/>
-                            <constraint firstAttribute="centerX" secondItem="5V8-fx-ZxH" secondAttribute="centerX" id="Vp7-6x-e5c"/>
                             <constraint firstItem="0uP-wt-8bb" firstAttribute="top" secondItem="auM-7W-3nF" secondAttribute="top" id="X9x-cf-l9d"/>
+                            <constraint firstItem="C42-AY-08P" firstAttribute="top" secondItem="Qhz-G0-bft" secondAttribute="bottom" constant="8" symbolic="YES" id="Xa5-ZZ-f6Q"/>
                             <constraint firstItem="5V8-fx-ZxH" firstAttribute="leading" secondItem="kU2-7Y-EGn" secondAttribute="trailing" constant="5" id="av4-M1-pUP"/>
                             <constraint firstItem="0uP-wt-8bb" firstAttribute="leading" secondItem="g7c-mJ-zMN" secondAttribute="leading" id="fMS-82-wRq"/>
                             <constraint firstAttribute="centerY" secondItem="5V8-fx-ZxH" secondAttribute="centerY" id="ff7-Jv-JXL"/>
-                            <constraint firstAttribute="centerX" secondItem="tGI-jj-7tq" secondAttribute="centerX" id="grk-Zy-fpn"/>
-                            <constraint firstAttribute="centerY" secondItem="5V8-fx-ZxH" secondAttribute="centerY" id="hgw-c8-7Jp"/>
                             <constraint firstItem="9Mc-zk-aL0" firstAttribute="leading" secondItem="auM-7W-3nF" secondAttribute="trailing" constant="5" id="kF6-CO-aUj"/>
                             <constraint firstItem="kU2-7Y-EGn" firstAttribute="top" secondItem="0uP-wt-8bb" secondAttribute="bottom" constant="5" id="la4-lY-bHW"/>
                             <constraint firstAttribute="centerX" secondItem="5V8-fx-ZxH" secondAttribute="centerX" id="lc7-99-7aC"/>
                             <constraint firstItem="auM-7W-3nF" firstAttribute="leading" secondItem="0uP-wt-8bb" secondAttribute="trailing" constant="5" id="nBh-ay-HTL"/>
                             <constraint firstItem="9xI-94-6Vx" firstAttribute="leading" secondItem="g7c-mJ-zMN" secondAttribute="trailing" constant="5" id="nIq-VM-qLJ"/>
                             <constraint firstItem="TcN-23-Cjw" firstAttribute="leading" secondItem="5V8-fx-ZxH" secondAttribute="trailing" constant="5" id="q2p-jf-BfL"/>
-                            <constraint firstAttribute="centerY" secondItem="5V8-fx-ZxH" secondAttribute="centerY" id="syI-4h-SXl"/>
+                            <constraint firstItem="9Mc-zk-aL0" firstAttribute="top" secondItem="C42-AY-08P" secondAttribute="bottom" constant="32" id="qET-gu-KEM"/>
                             <constraint firstItem="g7c-mJ-zMN" firstAttribute="top" secondItem="kU2-7Y-EGn" secondAttribute="bottom" constant="5" id="t2Z-ua-1Kr"/>
                             <constraint firstItem="TcN-23-Cjw" firstAttribute="top" secondItem="9Mc-zk-aL0" secondAttribute="bottom" constant="5" id="v97-PV-eSr"/>
                             <constraint firstItem="Kog-KD-Q1b" firstAttribute="top" secondItem="TcN-23-Cjw" secondAttribute="bottom" constant="5" id="wpv-tA-LXQ"/>
-                            <constraint firstAttribute="centerX" secondItem="5V8-fx-ZxH" secondAttribute="centerX" id="xVw-SJ-lp2"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="Vp7-6x-e5c"/>
-                                <exclude reference="hgw-c8-7Jp"/>
-                                <exclude reference="syI-4h-SXl"/>
-                                <exclude reference="xVw-SJ-lp2"/>
-                            </mask>
-                        </variation>
                     </view>
                     <connections>
+                        <outlet property="congratsMessage" destination="BUW-hI-3S5" id="9QG-8l-vOm"/>
                         <outlet property="imageView0" destination="0uP-wt-8bb" id="2Jg-hz-fN1"/>
                         <outlet property="imageView1" destination="auM-7W-3nF" id="ubu-bL-c1P"/>
                         <outlet property="imageView2" destination="9Mc-zk-aL0" id="tX2-Q1-HAE"/>
