--- a/TileGame/TileGame/Main.storyboard
+++ b/TileGame/TileGame/Main.storyboard
@@ -2,7 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6205" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6198"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints with attributes relative to the layout margin" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Main Screen-->
@@ -128,7 +128,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vI2-cd-d5v">
-                                <rect key="frame" x="20" y="541" width="50" height="39"/>
+                                <rect key="frame" x="534" y="40" width="50" height="39"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="EIk-Cn-F2U"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <state key="normal" title="Back">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -138,67 +141,46 @@
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Try to complete the picture by putting the tiles in the correct order. Tap two tiles to swap their positions. " translatesAutoresizingMaskIntoConstraints="NO" id="C42-AY-08P">
-                                <rect key="frame" x="10" y="50" width="580" height="50"/>
+                                <rect key="frame" x="20" y="40" width="494" height="80"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="1Ug-51-sxy"/>
                                     <constraint firstAttribute="height" constant="50" id="IRc-Iv-LQE"/>
+                                    <constraint firstAttribute="height" constant="50" id="iqD-Wl-aP0"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BUW-hI-3S5">
-                                <rect key="frame" x="200" y="540" width="200" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="05X-KY-avX"/>
-                                    <constraint firstAttribute="width" constant="200" id="5so-J8-iVa"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j3q-5V-6gT">
-                                <rect key="frame" x="150" y="140" width="300" height="300"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="250" id="eHn-VM-fEU"/>
-                                    <constraint firstAttribute="width" secondItem="j3q-5V-6gT" secondAttribute="height" multiplier="1:1" id="fhB-Om-RLb"/>
-                                    <constraint firstAttribute="width" constant="300" id="mJk-Sg-9sm"/>
-                                </constraints>
                                 <variation key="default">
                                     <mask key="constraints">
-                                        <exclude reference="eHn-VM-fEU"/>
+                                        <exclude reference="IRc-Iv-LQE"/>
+                                        <exclude reference="iqD-Wl-aP0"/>
                                     </mask>
                                 </variation>
-                            </view>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BUW-hI-3S5">
+                                <rect key="frame" x="30" y="540" width="540" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="05X-KY-avX"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="C42-AY-08P" firstAttribute="top" secondItem="Qhz-G0-bft" secondAttribute="bottom" constant="30" id="0bA-EF-SEz"/>
-                            <constraint firstItem="C42-AY-08P" firstAttribute="top" secondItem="Qhz-G0-bft" secondAttribute="bottom" constant="40" id="3Wt-Mc-u4b"/>
-                            <constraint firstItem="fKk-Ft-N1u" firstAttribute="top" secondItem="vI2-cd-d5v" secondAttribute="bottom" constant="20" id="GCS-qs-z38"/>
-                            <constraint firstItem="C42-AY-08P" firstAttribute="leading" secondItem="a6F-6c-ZDX" secondAttribute="leading" constant="10" id="Ghr-5Z-ogx"/>
-                            <constraint firstAttribute="centerX" secondItem="C42-AY-08P" secondAttribute="centerX" id="JwL-29-Zp3"/>
-                            <constraint firstItem="vI2-cd-d5v" firstAttribute="leading" secondItem="a6F-6c-ZDX" secondAttribute="leading" constant="20" id="KF9-cT-aTf"/>
+                            <constraint firstItem="C42-AY-08P" firstAttribute="top" secondItem="Qhz-G0-bft" secondAttribute="bottom" constant="20" id="0bA-EF-SEz"/>
+                            <constraint firstItem="vI2-cd-d5v" firstAttribute="top" secondItem="C42-AY-08P" secondAttribute="top" id="5O8-cT-y3k"/>
                             <constraint firstAttribute="centerX" secondItem="BUW-hI-3S5" secondAttribute="centerX" id="KY3-gm-i9K"/>
-                            <constraint firstAttribute="centerX" secondItem="j3q-5V-6gT" secondAttribute="centerX" id="NFV-Lf-UUh"/>
-                            <constraint firstItem="j3q-5V-6gT" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="a6F-6c-ZDX" secondAttribute="leading" constant="10" id="QRF-Fa-fhO"/>
-                            <constraint firstItem="C42-AY-08P" firstAttribute="top" secondItem="Qhz-G0-bft" secondAttribute="bottom" id="Xa5-ZZ-f6Q"/>
-                            <constraint firstItem="j3q-5V-6gT" firstAttribute="top" secondItem="C42-AY-08P" secondAttribute="bottom" constant="40" id="Ypt-eN-m2V"/>
-                            <constraint firstAttribute="trailing" secondItem="C42-AY-08P" secondAttribute="trailing" constant="10" id="bae-Y5-QNg"/>
-                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="j3q-5V-6gT" secondAttribute="trailing" constant="10" id="eGL-oM-oNx"/>
                             <constraint firstItem="fKk-Ft-N1u" firstAttribute="top" secondItem="BUW-hI-3S5" secondAttribute="bottom" constant="20" id="j7W-q6-FMp"/>
+                            <constraint firstItem="vI2-cd-d5v" firstAttribute="leading" secondItem="C42-AY-08P" secondAttribute="trailing" constant="20" id="mrg-Qd-Y0S"/>
+                            <constraint firstItem="C42-AY-08P" firstAttribute="leading" secondItem="a6F-6c-ZDX" secondAttribute="leading" constant="20" id="w73-xT-c8C"/>
+                            <constraint firstAttribute="trailing" secondItem="BUW-hI-3S5" secondAttribute="trailing" constant="30" id="wgb-JP-LDw"/>
+                            <constraint firstItem="vI2-cd-d5v" firstAttribute="trailing" secondItem="a6F-6c-ZDX" secondAttribute="trailingMargin" id="xQt-vW-vPQ"/>
+                            <constraint firstItem="BUW-hI-3S5" firstAttribute="leading" secondItem="a6F-6c-ZDX" secondAttribute="leading" constant="30" id="yWs-bG-atg"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="3Wt-Mc-u4b"/>
-                                <exclude reference="Xa5-ZZ-f6Q"/>
-                                <exclude reference="QRF-Fa-fhO"/>
-                                <exclude reference="eGL-oM-oNx"/>
-                            </mask>
-                        </variation>
                     </view>
                     <connections>
                         <outlet property="congratsMessage" destination="BUW-hI-3S5" id="9QG-8l-vOm"/>
-                        <outlet property="tileArea" destination="j3q-5V-6gT" id="Nwq-LT-gQ7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aIg-Ne-QI5" userLabel="First Responder" sceneMemberID="firstResponder"/>
