--- a/TileGame/TileGame/Main.storyboard
+++ b/TileGame/TileGame/Main.storyboard
@@ -25,7 +25,7 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i6b-8I-ASw">
-                                <rect key="frame" x="175" y="445" width="40" height="40"/>
+                                <rect key="frame" x="175" y="435" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="d61-Xx-AKy"/>
                                     <constraint firstAttribute="width" constant="40" id="qvN-x5-B74"/>
@@ -39,7 +39,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="USl-h6-qgB">
-                                <rect key="frame" x="385" y="445" width="40" height="40"/>
+                                <rect key="frame" x="385" y="435" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="40" id="TYL-ZK-4DU"/>
                                     <constraint firstAttribute="height" constant="40" id="cAb-Io-SDS"/>
@@ -53,7 +53,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose image" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mj5-oM-ytJ">
-                                <rect key="frame" x="243" y="445" width="115" height="40"/>
+                                <rect key="frame" x="243" y="435" width="115" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="6BT-Fr-FRV"/>
                                     <constraint firstAttribute="width" constant="115" id="mEA-Dh-8gB"/>
@@ -63,7 +63,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7cw-uc-rQN">
-                                <rect key="frame" x="175" y="515" width="250" height="50"/>
+                                <rect key="frame" x="175" y="525" width="250" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="250" id="a9J-o5-fR1"/>
                                     <constraint firstAttribute="height" constant="50" id="p7H-FL-fvj"/>
@@ -83,33 +83,72 @@
                                 <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tiles per row" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v4I-w7-kZS">
+                                <rect key="frame" x="175" y="475" width="100" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="VZF-q1-yck"/>
+                                    <constraint firstAttribute="height" constant="40" id="ktT-QQ-r6s"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zGq-2D-jDD">
+                                <rect key="frame" x="405" y="475" width="20" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="20" id="QIi-mG-0wv"/>
+                                    <constraint firstAttribute="height" constant="40" id="REK-aG-qQu"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="JQU-OV-dG8">
+                                <rect key="frame" x="291" y="480" width="94" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="29" id="gXO-Uc-fwt"/>
+                                </constraints>
+                                <connections>
+                                    <action selector="stepperPressed:" destination="BYZ-38-t0r" eventType="valueChanged" id="KKB-YZ-h6B"/>
+                                </connections>
+                            </stepper>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="i6b-8I-ASw" firstAttribute="leading" secondItem="8Fb-MQ-XGx" secondAttribute="leading" id="4vW-Do-NQW"/>
+                            <constraint firstItem="v4I-w7-kZS" firstAttribute="top" secondItem="8Fb-MQ-XGx" secondAttribute="bottom" constant="10" id="6LM-zf-fpo"/>
                             <constraint firstAttribute="centerX" secondItem="6p4-o8-wZC" secondAttribute="centerX" id="C89-vF-YNw"/>
                             <constraint firstAttribute="centerX" secondItem="7cw-uc-rQN" secondAttribute="centerX" id="D4D-Hw-SIA"/>
-                            <constraint firstItem="i6b-8I-ASw" firstAttribute="top" secondItem="8Fb-MQ-XGx" secondAttribute="bottom" constant="20" id="Hbx-hy-OYy"/>
+                            <constraint firstItem="zGq-2D-jDD" firstAttribute="leading" secondItem="JQU-OV-dG8" secondAttribute="trailing" constant="20" id="GJZ-Yo-6Km"/>
+                            <constraint firstItem="i6b-8I-ASw" firstAttribute="top" secondItem="8Fb-MQ-XGx" secondAttribute="bottom" constant="10" id="Hbx-hy-OYy"/>
                             <constraint firstAttribute="centerX" secondItem="8Fb-MQ-XGx" secondAttribute="centerX" id="Ldc-ae-IXZ"/>
                             <constraint firstItem="USl-h6-qgB" firstAttribute="trailing" secondItem="8Fb-MQ-XGx" secondAttribute="trailing" id="Llx-Iv-6l0"/>
                             <constraint firstAttribute="centerX" secondItem="Mj5-oM-ytJ" secondAttribute="centerX" id="NXS-a5-Fg2"/>
                             <constraint firstItem="8Fb-MQ-XGx" firstAttribute="top" secondItem="6p4-o8-wZC" secondAttribute="bottom" constant="40" id="Naw-iu-mJr"/>
+                            <constraint firstItem="v4I-w7-kZS" firstAttribute="baseline" secondItem="zGq-2D-jDD" secondAttribute="baseline" id="Pyj-Kx-VLd"/>
+                            <constraint firstItem="zGq-2D-jDD" firstAttribute="trailing" secondItem="USl-h6-qgB" secondAttribute="trailing" id="Twb-VJ-G0a"/>
                             <constraint firstItem="Mj5-oM-ytJ" firstAttribute="centerX" secondItem="wfy-db-euE" secondAttribute="centerX" id="ba3-gU-oIn"/>
+                            <constraint firstItem="v4I-w7-kZS" firstAttribute="leading" secondItem="i6b-8I-ASw" secondAttribute="leading" id="fTV-kw-9iw"/>
                             <constraint firstItem="Mj5-oM-ytJ" firstAttribute="baseline" secondItem="USl-h6-qgB" secondAttribute="baseline" id="gfP-Nl-oad"/>
                             <constraint firstAttribute="centerY" secondItem="8Fb-MQ-XGx" secondAttribute="centerY" id="ieR-Y5-Nfo"/>
+                            <constraint firstItem="7cw-uc-rQN" firstAttribute="top" secondItem="v4I-w7-kZS" secondAttribute="bottom" constant="10" id="lqC-4p-I6F"/>
                             <constraint firstItem="Mj5-oM-ytJ" firstAttribute="top" secondItem="USl-h6-qgB" secondAttribute="top" id="oaV-27-NJ9"/>
-                            <constraint firstItem="7cw-uc-rQN" firstAttribute="top" secondItem="Mj5-oM-ytJ" secondAttribute="bottom" constant="30" id="sCe-Uo-B6a"/>
+                            <constraint firstItem="JQU-OV-dG8" firstAttribute="top" secondItem="Mj5-oM-ytJ" secondAttribute="bottom" constant="5" id="ptw-Sq-tME"/>
+                            <constraint firstItem="7cw-uc-rQN" firstAttribute="top" secondItem="Mj5-oM-ytJ" secondAttribute="bottom" constant="50" id="sCe-Uo-B6a"/>
                             <constraint firstItem="i6b-8I-ASw" firstAttribute="baseline" secondItem="USl-h6-qgB" secondAttribute="baseline" id="t8B-X0-lPq"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="ba3-gU-oIn"/>
                                 <exclude reference="gfP-Nl-oad"/>
+                                <exclude reference="6LM-zf-fpo"/>
                             </mask>
                         </variation>
                     </view>
                     <connections>
                         <outlet property="imageCycler" destination="8Fb-MQ-XGx" id="1SL-Yo-YBE"/>
+                        <outlet property="stepper" destination="JQU-OV-dG8" id="4bU-L9-Abt"/>
+                        <outlet property="tilesPerRowLabel" destination="zGq-2D-jDD" id="t3W-yK-ZE7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
