Add properties for username, retweet #, favorited #. Create TweetViewController which appears when a tableview cell is selected.

--- a/TwitterClone/TwitterClone/Base.lproj/Main.storyboard
+++ b/TwitterClone/TwitterClone/Base.lproj/Main.storyboard
@@ -2,6 +2,8 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Home Time Line View Controller-->
@@ -26,32 +28,33 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="61u-w3-NPm" id="rXt-jk-zOH">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xAK-cp-g6h">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xAK-cp-g6h">
                                                     <rect key="frame" x="120" y="0.0" width="480" height="119"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4sc-SR-8oB">
-                                                    <rect key="frame" x="0.0" y="0.0" width="120" height="119"/>
+                                                    <rect key="frame" x="10" y="10" width="100" height="99"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="120" id="cpk-oM-14T"/>
+                                                        <constraint firstAttribute="width" constant="100" id="cpk-oM-14T"/>
                                                     </constraints>
                                                 </imageView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="bottom" secondItem="xAK-cp-g6h" secondAttribute="bottom" id="4f3-nd-qTe"/>
-                                                <constraint firstItem="4sc-SR-8oB" firstAttribute="top" secondItem="rXt-jk-zOH" secondAttribute="top" id="5do-hr-MrA"/>
-                                                <constraint firstItem="xAK-cp-g6h" firstAttribute="leading" secondItem="4sc-SR-8oB" secondAttribute="trailing" id="F9y-rL-zFc"/>
-                                                <constraint firstAttribute="bottom" secondItem="4sc-SR-8oB" secondAttribute="bottom" id="ckx-mu-7JB"/>
+                                                <constraint firstItem="4sc-SR-8oB" firstAttribute="top" secondItem="rXt-jk-zOH" secondAttribute="top" constant="10" id="5do-hr-MrA"/>
+                                                <constraint firstItem="xAK-cp-g6h" firstAttribute="leading" secondItem="4sc-SR-8oB" secondAttribute="trailing" constant="10" id="F9y-rL-zFc"/>
+                                                <constraint firstAttribute="bottom" secondItem="4sc-SR-8oB" secondAttribute="bottom" constant="10" id="ckx-mu-7JB"/>
                                                 <constraint firstItem="xAK-cp-g6h" firstAttribute="top" secondItem="rXt-jk-zOH" secondAttribute="top" id="cyX-0Z-miG"/>
                                                 <constraint firstAttribute="trailing" secondItem="xAK-cp-g6h" secondAttribute="trailing" id="dZ8-5V-icf"/>
-                                                <constraint firstItem="4sc-SR-8oB" firstAttribute="leading" secondItem="rXt-jk-zOH" secondAttribute="leading" id="e8W-58-7Ou"/>
+                                                <constraint firstItem="4sc-SR-8oB" firstAttribute="leading" secondItem="rXt-jk-zOH" secondAttribute="leading" constant="10" id="e8W-58-7Ou"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="cellImage" destination="4sc-SR-8oB" id="lbf-RL-6tv"/>
                                             <outlet property="cellText" destination="xAK-cp-g6h" id="KOY-Xw-jnN"/>
+                                            <segue destination="zlt-az-0J8" kind="show" identifier="ShowTweet" id="REZ-ey-Mf7"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -76,6 +79,112 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="140" y="131"/>
+        </scene>
+        <!--Tweet View Controller-->
+        <scene sceneID="nOo-5w-g0S">
+            <objects>
+                <viewController id="zlt-az-0J8" customClass="TweetViewController" customModule="TwitterClone" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="XFg-2a-SPg"/>
+                        <viewControllerLayoutGuide type="bottom" id="qPW-Oz-Z9q"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="NxO-wc-E3a">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tweet" lineBreakMode="wordWrap" numberOfLines="10" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QS8-8e-wsF">
+                                <rect key="frame" x="36" y="200" width="528" height="200"/>
+                                <color key="backgroundColor" red="0.63098153589999995" green="0.86670137049999996" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="JSS-WT-gnk"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="w4T-am-ssY">
+                                <rect key="frame" x="36" y="40" width="140" height="140"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="w4T-am-ssY" secondAttribute="height" multiplier="1:1" id="0Zz-Lx-7Ts"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tlf-CL-UbC">
+                                <rect key="frame" x="542" y="550" width="42" height="30"/>
+                                <state key="normal" title="BACK">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="dismissTweetViewController:" destination="zlt-az-0J8" eventType="touchUpInside" id="XwV-Iz-chO"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" lineBreakMode="wordWrap" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t5F-f2-atw">
+                                <rect key="frame" x="196" y="99" width="368" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Favorited" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c1a-T5-Jgl">
+                                <rect key="frame" x="338" y="430" width="125" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="125" id="aQR-n5-FT4"/>
+                                    <constraint firstAttribute="height" constant="50" id="f7g-58-E3J"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Retweets" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E70-GV-CRl">
+                                <rect key="frame" x="138" y="430" width="125" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="C2a-HR-VLh"/>
+                                    <constraint firstAttribute="width" constant="125" id="HHM-tq-PjZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.63098153589999995" green="0.86670137049999996" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="qPW-Oz-Z9q" firstAttribute="top" secondItem="Tlf-CL-UbC" secondAttribute="bottom" constant="20" id="8Hp-KZ-1xF"/>
+                            <constraint firstItem="qPW-Oz-Z9q" firstAttribute="top" secondItem="c1a-T5-Jgl" secondAttribute="bottom" constant="40" id="8vK-Dm-hAI"/>
+                            <constraint firstItem="Tlf-CL-UbC" firstAttribute="trailing" secondItem="NxO-wc-E3a" secondAttribute="trailingMargin" id="Dzx-fE-dOg"/>
+                            <constraint firstItem="c1a-T5-Jgl" firstAttribute="leading" secondItem="E70-GV-CRl" secondAttribute="trailing" constant="40" id="Fu3-EM-YFC"/>
+                            <constraint firstItem="QS8-8e-wsF" firstAttribute="leading" secondItem="NxO-wc-E3a" secondAttribute="leadingMargin" constant="20" id="IHI-ef-hb0"/>
+                            <constraint firstItem="QS8-8e-wsF" firstAttribute="top" secondItem="w4T-am-ssY" secondAttribute="bottom" constant="20" id="ITD-tb-h9j"/>
+                            <constraint firstItem="E70-GV-CRl" firstAttribute="top" secondItem="c1a-T5-Jgl" secondAttribute="top" id="J5W-5f-zaV"/>
+                            <constraint firstAttribute="centerX" secondItem="c1a-T5-Jgl" secondAttribute="centerX" constant="-100" id="UER-Er-cuY"/>
+                            <constraint firstItem="w4T-am-ssY" firstAttribute="centerY" secondItem="t5F-f2-atw" secondAttribute="centerY" constant="0.5" id="YD5-Yx-jgh"/>
+                            <constraint firstItem="t5F-f2-atw" firstAttribute="leading" secondItem="w4T-am-ssY" secondAttribute="trailing" constant="20" id="Z6w-AN-JbT"/>
+                            <constraint firstAttribute="centerY" secondItem="QS8-8e-wsF" secondAttribute="centerY" id="aVB-V6-M69"/>
+                            <constraint firstItem="w4T-am-ssY" firstAttribute="leading" secondItem="QS8-8e-wsF" secondAttribute="leading" id="cdo-bS-tKj"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="QS8-8e-wsF" secondAttribute="trailing" constant="20" id="cic-iq-cNs"/>
+                            <constraint firstItem="w4T-am-ssY" firstAttribute="top" secondItem="XFg-2a-SPg" secondAttribute="bottom" constant="20" id="fyC-0f-1Hx"/>
+                            <constraint firstItem="qPW-Oz-Z9q" firstAttribute="top" secondItem="E70-GV-CRl" secondAttribute="bottom" constant="40" id="kzM-dt-f1B"/>
+                            <constraint firstItem="c1a-T5-Jgl" firstAttribute="top" secondItem="QS8-8e-wsF" secondAttribute="bottom" constant="30" id="msb-FQ-ddS"/>
+                            <constraint firstItem="E70-GV-CRl" firstAttribute="top" secondItem="QS8-8e-wsF" secondAttribute="bottom" constant="30" id="pme-px-uxf"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="t5F-f2-atw" secondAttribute="trailing" constant="20" id="rrV-hb-CCc"/>
+                            <constraint firstAttribute="centerX" secondItem="E70-GV-CRl" secondAttribute="centerX" constant="100" id="zPj-1l-VDi"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="Fu3-EM-YFC"/>
+                                <exclude reference="8vK-Dm-hAI"/>
+                                <exclude reference="kzM-dt-f1B"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="favorited" destination="c1a-T5-Jgl" id="DMC-iM-oFt"/>
+                        <outlet property="retweets" destination="E70-GV-CRl" id="fwK-Yr-wel"/>
+                        <outlet property="tweetImage" destination="w4T-am-ssY" id="btu-r6-kq4"/>
+                        <outlet property="tweetText" destination="QS8-8e-wsF" id="Der-3u-pHW"/>
+                        <outlet property="username" destination="t5F-f2-atw" id="jlO-l5-CXt"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KZ9-KM-G3O" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="882" y="162"/>
         </scene>
     </scenes>
 </document>
